# fishregression

./: Dockerfile  README.md  knn_model.pkl  pyproject.toml
LB/: default.conf  knn.py  lr.py  main.py
src/fishregression/: cli.py  main.py  test.ipynb
src/fishregression/api/: knn.py  lr.py
tests/: test_cli.py
