[project]
name = "fishregression"
version = "0.6.1"
description = "Default template for PDM package"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = [
    "sympy>=1.13.2",
    "uvicorn[standard]>=0.30.6",
    "fastapi>=0.114.0",
    "scikit-learn>=1.5.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
pp = "fishregression.cli:predict"

[tool.pytest.ini_options]
pythonpath = ["src/", "."]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.9.2",
]
